# pymcuprog

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  help.md  pylintrc  pymcuprog_build.py  pymcuprog_execute.py  pypi.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: requirements.txt
doc/source/: conf.py  pymcuprog.rst
doc/source/_templates/: package.rst_t
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pymcuprog.deviceinfo.html  pymcuprog.html  pymcuprog.serialupdi.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  pymcuprog.deviceinfo.rst.txt  pymcuprog.serialupdi.rst.txt
docs/_static/: microchip.css
pymcuprog/: __init__.py  avr32target.py  avr8target.py  avrdebugger.py  backend.py  hexfileutils.py  nvm.py  nvmavr32.py  nvmdebugwire.py  nvmmegaavrjtag.py  nvmmzeroplus.py  nvmpic.py  nvmserialupdi.py  nvmspi.py  nvmtpi.py  nvmupdi.py  nvmxmega.py  programmer.py  pymcuprog.py  pymcuprog_errors.py  pymcuprog_main.py  samtarget.py  toolconnection.py  utils.py  version.py
pymcuprog/deviceinfo/: configgenerator.py  deviceinfo.py  deviceinfokeys.py  generate_device_info.py  generateconfig.py  harvest.py  memorynames.py
pymcuprog/deviceinfo/devices/: atmega1608.py  atmega1609.py  atmega3208.py  atmega3209.py  atmega324pb.py  atmega328p.py  atmega4808.py  atmega4809.py  atmega808.py  atmega809.py  atsamd21e18a.py  atsamd21g18a.py  attiny104.py  attiny1604.py  attiny1606.py  attiny1607.py  attiny1614.py  attiny1616.py  attiny1617.py  attiny1624.py  attiny1626.py  attiny1627.py  attiny202.py  attiny204.py  attiny212.py  attiny214.py  attiny3216.py  attiny3217.py  attiny3224.py  attiny3226.py  attiny3227.py  attiny402.py  attiny404.py  attiny406.py  attiny412.py  attiny414.py  attiny416.py  attiny417.py  attiny424.py  attiny426.py  (+88 more)
pymcuprog/serialupdi/: application.py  constants.py  link.py  nvm.py  nvmp0.py  nvmp2.py  nvmp3.py  nvmp4.py  nvmp5.py  physical.py  readwrite.py  timeout.py
pymcuprog/tests/: readme.md  test_backend.py  test_device_models.py  test_nvmserialupdi.py  test_nvmupdi.py  test_pymcuprogcli.py
